--- a/src/index.html
+++ b/src/index.html
@@ -58,12 +58,12 @@
     <meta property="og:description" content="Text Editor - Demo for the HTML5 Native File System.">
 
     <!-- Analytics -->
-    <script src="/inline-scripts/analytics.js" inline></script>
+    <script src="./inline-scripts/analytics.js" inline></script>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/styles/main.css" inline>
-    <link rel="stylesheet" href="/styles/standalone.css" inline>
-    <link rel="stylesheet" media="print" href="/styles/print.css" inline>
+    <link rel="stylesheet" href="./styles/main.css" inline>
+    <link rel="stylesheet" href="./styles/standalone.css" inline>
+    <link rel="stylesheet" media="print" href="./styles/print.css" inline>
 
     <!-- Origin Trial Token NFS API v1 (expires 2020-05-12) -->
     <meta http-equiv="origin-trial" content="ApP5hRHS+dIxGdu/1psSHsErxROE+aVFGqdUwBgrcsGuwWDpPo3iqanpH3EdEie7YHhBN0LL1sdkT89waJPbzwsAAABkeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZWNocm9tZWxhYnMuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJOYXRpdmVGaWxlU3lzdGVtIiwiZXhwaXJ5IjoxNTg5MzI3OTk5fQ==">
@@ -193,24 +193,24 @@
     </details>
 
     <!-- import the webpage's javascript file -->
-    <!-- <script src="/inline-scripts/base.js" inline></script> -->
-    <script src="/inline-scripts/idb-keyval-iife.js" inline></script>
+    <!-- <script src="./inline-scripts/base.js" inline></script> -->
+    <script src="./inline-scripts/idb-keyval-iife.js" inline></script>
 
-    <script src="/inline-scripts/rum.js" inline></script>
-    <script src="/inline-scripts/app.js" inline></script>
+    <script src="./inline-scripts/rum.js" inline></script>
+    <script src="./inline-scripts/app.js" inline></script>
 
-    <script src="/inline-scripts/menus.js" inline></script>
+    <script src="./inline-scripts/menus.js" inline></script>
 
-    <script src="/inline-scripts/text-area.js" inline></script>
-    <script src="/inline-scripts/fs-helpers.js" inline></script>
-    <script src="/inline-scripts/menu-file.js" inline></script>
-    <script src="/inline-scripts/menu-edit.js" inline></script>
-    <script src="/inline-scripts/menu-view.js" inline></script>
-    <script src="/inline-scripts/menu-recent.js" inline></script>
-    <script src="/inline-scripts/ui.js" inline></script>
-    <script src="/inline-scripts/keyboard-events.js" inline></script>
-    <script src="/inline-scripts/load-sw.js" inline></script>
-    <script src="/inline-scripts/app-install.js" inline></script>
-    <script src="/inline-scripts/fallback.js" inline></script>
+    <script src="./inline-scripts/text-area.js" inline></script>
+    <script src="./inline-scripts/fs-helpers.js" inline></script>
+    <script src="./inline-scripts/menu-file.js" inline></script>
+    <script src="./inline-scripts/menu-edit.js" inline></script>
+    <script src="./inline-scripts/menu-view.js" inline></script>
+    <script src="./inline-scripts/menu-recent.js" inline></script>
+    <script src="./inline-scripts/ui.js" inline></script>
+    <script src="./inline-scripts/keyboard-events.js" inline></script>
+    <script src="./inline-scripts/load-sw.js" inline></script>
+    <script src="./inline-scripts/app-install.js" inline></script>
+    <script src="./inline-scripts/fallback.js" inline></script>
   </body>
 </html>
