--- a/src/index.html
+++ b/src/index.html
@@ -75,8 +75,8 @@
     <link rel="stylesheet" href="./tinymce-editor-styles.css" inline>
   </head>
   <body class="wordwrap">
-    <header>
-      <h1 style="display: none;">
+    <header style="display: none;">
+      <h1>
         <span id="headerFileName">Text Editor</span><span id="modifiedHeader" class="hidden">*</span>
         <span id="headerAppName" class="hidden"> - Text Editor</span>
       </h1>
