--- a/src/index.html
+++ b/src/index.html
@@ -218,9 +218,7 @@
 
     <!-- Import libraries -->
     <script src="./setup-tinymce.js" inline></script>
-    <script src="./plugin-markdown.js" inline></script>
-    <script type="module" src="./file-manager.js" inline></script>
-    <script type="module" src="./browser-nfs/index.js" inline></script>
+    <script src="./plugin-markdown.js"></script>
   </body>
 </html>
 
