--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <!-- Add TinyMCE -->
     <script src="./tinymce/tinymce.min.js" referrerpolicy="origin"></script>
-    <link rel="stylesheet" href="./tinymce-editor-styles.css" inline>
+    <link rel="stylesheet" href="./editor-styles.css" inline>
   </head>
   <body class="wordwrap">
     <header style="display: none;">
@@ -217,7 +217,7 @@
     <script src="./inline-scripts/fallback.js" inline></script>
 
     <!-- Import libraries -->
-    <script src="./setup-tinymce.js" inline></script>
+    <script src="./index.js" inline></script>
     <script src="./plugin-markdown.js"></script>
   </body>
 </html>
