--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Manifest and icons -->
     <link rel="manifest" href="./manifest.json">
     <link rel="icon" type="image/png" href="./images/favicon.png">
-    <meta name="theme-color" content="#1a237e">
+    <meta name="theme-color" content="#000000">
     <link rel="apple-touch-icon" sizes="192x192" href="./images/icon-192.png">
 
     <!-- Add to homescreen for Chrome on Android. -->
@@ -39,7 +39,7 @@
 
     <!-- Tile icon for Windows 8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="./images/icon-144.png">
-    <meta name="msapplication-TileColor" content="#1a237e">
+    <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-tap-highlight" content="no">
 
     <!-- Default twitter cards -->
@@ -61,9 +61,9 @@
     <script src="./inline-scripts/analytics.js" inline></script>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="./styles/main.css" inline>
+    <!--<link rel="stylesheet" href="./styles/main.css" inline>
     <link rel="stylesheet" href="./styles/standalone.css" inline>
-    <link rel="stylesheet" media="print" href="./styles/print.css" inline>
+    <link rel="stylesheet" media="print" href="./styles/print.css" inline>-->
 
     <!-- Origin Trial Token NFS API v1 (expires 2020-05-12) -->
     <meta http-equiv="origin-trial" content="ApP5hRHS+dIxGdu/1psSHsErxROE+aVFGqdUwBgrcsGuwWDpPo3iqanpH3EdEie7YHhBN0LL1sdkT89waJPbzwsAAABkeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZWNocm9tZWxhYnMuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJOYXRpdmVGaWxlU3lzdGVtIiwiZXhwaXJ5IjoxNTg5MzI3OTk5fQ==">
