--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Manifest and icons -->
     <link rel="manifest" href="./manifest.json">
     <link rel="icon" type="image/png" href="./images/favicon.png">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#FFFFFF">
     <link rel="apple-touch-icon" sizes="192x192" href="./images/icon-192.png">
 
     <!-- Add to homescreen for Chrome on Android. -->
@@ -39,7 +39,7 @@
 
     <!-- Tile icon for Windows 8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="./images/icon-144.png">
-    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
     <meta name="msapplication-tap-highlight" content="no">
 
     <!-- Default twitter cards -->
