--- a/index.html
+++ b/index.html
@@ -1,21 +1,4 @@
 <!DOCTYPE html>
-<!--
-  Copyright 2019 Google Inc.
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
-
-  Author: Pete LePage (petele@google.com)
--->
 <html lang="en">
   <head>
     <title>Text Editor</title>
@@ -24,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- SEO description and info -->
-    <meta name="description" content="Text Editor - Demo for the HTML5 Native File System.">
+    <meta name="description" content="Text Editor - TinyMCE + PWA + NFS.">
     <link rel="canonical" href="https://googlechromelabs.github.io/text-editor/">
 
     <!-- Manifest and icons -->
@@ -46,7 +29,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://googlechromelabs.github.io/text-editor/">
     <meta name="twitter:title" content="Text Editor">
-    <meta name="twitter:description" content="Text Editor - Demo for the HTML5 Native File System.">
+    <meta name="twitter:description" content="Text Editor - TinyMCE + PWA + NFS..">
     <meta name="twitter:image" content="./images/icon-192.png">
     <meta name="twitter:creator" content="@petele">
 
@@ -55,12 +38,12 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="./images/icon-192.png">
     <meta property="og:url" content="https://googlechromelabs.github.io/text-editor/">
-    <meta property="og:description" content="Text Editor - Demo for the HTML5 Native File System.">
+    <meta property="og:description" content="Text Editor - TinyMCE + PWA + NFS..">
 
     <!-- Analytics -->
     <script src="./inline-scripts/analytics.js" inline></script>
 
-    <!-- import the webpage's stylesheet -->
+    <!-- Import the web page's stylesheets -->
     <!--<link rel="stylesheet" href="./styles/main.css" inline>
     <link rel="stylesheet" href="./styles/standalone.css" inline>
     <link rel="stylesheet" media="print" href="./styles/print.css" inline>-->
@@ -70,90 +53,11 @@
     <!-- Origin Trial Token NFS API v2 (expires 2020-05-25) -->
     <meta http-equiv="origin-trial" content="AouXz9/sqzYGRIFkw8KK0QXp0HOo99+Pg8NAr/4pRA1pAlaTeQ6BngqqkBUzfjvxzPcRf15pmieR4RDhJB9bKwAAAABleyJvcmlnaW4iOiJodHRwczovL2dvb2dsZWNocm9tZWxhYnMuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJOYXRpdmVGaWxlU3lzdGVtMiIsImV4cGlyeSI6MTU5MDQxNzc1NX0=">
 
-    <!-- Add TinyMCE -->
-    <script src="./tinymce/tinymce.min.js" referrerpolicy="origin"></script>
+    <!-- Add TinyMCE editor stylesheet -->
     <link rel="stylesheet" href="./editor-styles.css" inline>
   </head>
-  <body class="wordwrap">
-    <header style="display: none;">
-      <h1>
-        <span id="headerFileName">Text Editor</span><span id="modifiedHeader" class="hidden">*</span>
-        <span id="headerAppName" class="hidden"> - Text Editor</span>
-      </h1>
-      <nav class="menubar">
-        <div id="menuFile" class="menuContainer">
-          <button id="butFile" class="menuTop" aria-label="File" aria-haspopup="true" aria-expanded="false">
-            <span class="kbdShortcut">F</span>ile
-          </button>
-          <div role="menu" class="menuItemContainer hidden">
-            <button id="butNew" type="button" role="menuitem">
-              New <kbd>^N</kbd>
-            </button>
-            <button id="butOpen" type="button" role="menuitem">
-              Open <kbd>^O</kbd>
-            </button>
-            <button id="butSave" type="button" role="menuitem">
-              Save <kbd>^S</kbd>
-            </button>
-            <button id="butSaveAs" type="button" role="menuitem">
-              Save As <kbd>^&uparrow;S</kbd>
-            </button>
-            <button id="butClose" type="button" role="menuitem">
-              Close <kbd>^W</kbd>
-            </button>
-          </div>
-        </div>
-        <div id="menuRecent" class="menuContainer">
-          <button id="butRecent" class="menuTop" aria-label="Recent" aria-haspopup="true" aria-expanded="false">
-            <span class="kbdShortcut">R</span>ecent
-          </button>
-          <div id="recentContainer" role="menu" class="menuItemContainer hidden">
-          </div>
-        </div>
-        <div id="menuEdit" class="menuContainer">
-          <button id="butEdit" class="menuTop" aria-label="Edit" aria-haspopup="true" aria-expanded="false">
-              <span class="kbdShortcut">E</span>dit
-          </button>
-          <div role="menu" class="menuItemContainer hidden">
-            <button id="butCut" type="button" role="menuitem">
-              Cut <kbd>^X</kbd>
-            </button>
-            <button id="butCopy" type="button" role="menuitem">
-              Copy <kbd>^C</kbd>
-            </button>
-            <button id="butPaste" type="button" role="menuitem">
-              Paste <kbd>^V</kbd>
-            </button>
-          </div>
-        </div>
-        <div id="menuView" class="menuContainer">
-          <button id="butView" class="menuTop" aria-label="View" aria-haspopup="true" aria-expanded="false">
-              <span class="kbdShortcut">V</span>iew
-          </button>
-          <div role="menu" class="menuItemContainer hidden">
-            <button id="butWordWrap" type="button" aria-checked="true" role="menuitemcheckbox">
-              Word Wrap
-            </button>
-            <button id="butMonospace" type="button" aria-checked="false" role="menuitemcheckbox">
-              Monospace Font
-            </button>
-            <button id="butCaptureTabs" type="button" aria-checked="true" role="menuitemcheckbox">
-              Capture Tabs <kbd>^&uparrow;M</kbd>
-            </button>
-            <button id="butFontBigger" type="button" role="menuitem">
-              Increase Font Size
-            </button>
-            <button id="butFontSmaller" type="button" role="menuitem">
-              Decrease Font Size
-            </button>
-          </div>
-        </div>
-        <div id="menuInstall" class="menuContainer">
-          <button id="butInstall" aria-label="Install" class="menuTop hidden">
-              <span class="kbdShortcut">I</span>nstall
-          </button>
-        </div>
-      </nav>
+  <body>
+    <header>
     </header>
 
     <textarea id="textEditor" autofocus spellcheck="true"
@@ -162,40 +66,7 @@
     <a id="aDownloadFile" download></a>
     <input type="file" id="filePicker">
 
-    <details id="footer" class="footer" style="display: none;">
-      <summary>About
-        <span>
-          <span id="modifiedFooter" class="hidden">*</span>
-          <span id="lblLegacyFS" class="hidden footer-label">Legacy Mode</span>
-          <span id="lblTabMovesFocus" class="hidden footer-label">Tab Moves Focus</span>
-        </span>
-      </summary>
-      <div id="not-supported">
-        The
-        <a href="https://wicg.github.io/native-file-system/" target="_blank">Native File System API</a>
-        is <b>not</b> supported in this browser yet, and Text Editor is running
-        in legacy mode. In legacy mode, the file modified indicators are not shown.
-        If you're running Chrome, you can enable the Native File System
-        APIs by enabling the <code>#native-file-system-api</code>
-        flag in <code>chrome://flags</code>.
-      </div>
-      <div>
-        Text Editor is a simple text editor similar to notepad that makes
-        it easy to edit text files on your local file system. It shows how
-        to easily use the new HTML5 Native File System APIs. To learn more
-        about the Native File System APIs and how this demo was built, check out
-        <a href="https://web.dev/native-file-system/" target="_blank">
-        The native file system APIs</a> article on Web Fundamentals, or see the
-        <a href="https://github.com/GoogleChromeLabs/text-editor/" target="_blank">
-        source code on GitHub</a>.
-        Written by <a href="https://twitter.com/petele" target="_blank">Pete LePage</a>.
-        <small id="lastUpdated">
-          Last Updated: [[BUILD_DATE]] (v[[VERSION]])
-        </small>
-      </div>
-    </details>
-
-    <!-- import the webpage's javascript file -->
+    <!-- Import the web page's Javascript files -->
     <!-- <script src="./inline-scripts/base.js" inline></script> -->
     <script src="./inline-scripts/idb-keyval-iife.js" inline></script>
 
@@ -217,8 +88,11 @@
     <script src="./inline-scripts/fallback.js" inline></script>
 
     <!-- Import libraries -->
-    <script src="./index.js" inline></script>
+    <script src="./tinymce/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="./plugin-markdown.js"></script>
+
+    <!-- Import application main script -->
+    <script src="./index.js" inline></script>
   </body>
 </html>
 
