--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               aria-label="Text Editor"></textarea>
 
     <a id="aDownloadFile" download></a>
-    <input type="file" id="filePicker">
+    <!--<input type="file" id="filePicker">-->
 
     <!-- Import the web page's Javascript files -->
     <!-- <script src="./inline-scripts/base.js" inline></script> -->
