--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <textarea id="textEditor" autofocus spellcheck="true"
               aria-label="Text Editor"></textarea>
 
-    <a id="aDownloadFile" download></a>
-    <!--<input type="file" id="filePicker">-->
+    <a id="aDownloadFile" style="display: none;" download></a>
+    <input type="file" id="filePicker" style="display: none;">
 
     <!-- Import the web page's Javascript files -->
     <!-- <script src="./inline-scripts/base.js" inline></script> -->
