--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
     <header>
     </header>
 
-    <textarea id="textEditor" autofocus spellcheck="true"
-              aria-label="Text Editor"></textarea>
+    <div id="textEditor" autofocus spellcheck="false" aria-label="Text Editor"></div>
 
     <a id="aDownloadFile" style="display: none;" download></a>
     <input type="file" id="filePicker" style="display: none;">
@@ -77,10 +76,10 @@
 
     <script src="./inline-scripts/text-area.js" inline></script>
     <script src="./inline-scripts/fs-helpers.js" inline></script>
-    <script src="./inline-scripts/menu-file.js" inline></script>
+    <!--<script src="./inline-scripts/menu-file.js" inline></script>
     <script src="./inline-scripts/menu-edit.js" inline></script>
     <script src="./inline-scripts/menu-view.js" inline></script>
-    <script src="./inline-scripts/menu-recent.js" inline></script>
+    <script src="./inline-scripts/menu-recent.js" inline></script>-->
     <script src="./inline-scripts/ui.js" inline></script>
     <script src="./inline-scripts/keyboard-events.js" inline></script>
     <script src="./inline-scripts/load-sw.js" inline></script>
