--- a/index.html
+++ b/index.html
@@ -56,14 +56,125 @@
     <!-- Add TinyMCE editor stylesheet -->
     <link rel="stylesheet" href="./editor-styles.css" inline>
   </head>
-  <body>
-    <header>
+  <body class="wordwrap">
+    <header style="display: none;">
+      <h1>
+        <span id="headerFileName">Text Editor</span><span id="modifiedHeader" class="hidden">*</span>
+        <span id="headerAppName" class="hidden"> - Text Editor</span>
+      </h1>
+      <nav class="menubar">
+        <div id="menuFile" class="menuContainer">
+          <button id="butFile" class="menuTop" aria-label="File" aria-haspopup="true" aria-expanded="false">
+            <span class="kbdShortcut">F</span>ile
+          </button>
+          <div role="menu" class="menuItemContainer hidden">
+            <button id="butNew" type="button" role="menuitem">
+              New <kbd>^N</kbd>
+            </button>
+            <button id="butOpen" type="button" role="menuitem">
+              Open <kbd>^O</kbd>
+            </button>
+            <button id="butSave" type="button" role="menuitem">
+              Save <kbd>^S</kbd>
+            </button>
+            <button id="butSaveAs" type="button" role="menuitem">
+              Save As <kbd>^&uparrow;S</kbd>
+            </button>
+            <button id="butClose" type="button" role="menuitem">
+              Close <kbd>^W</kbd>
+            </button>
+          </div>
+        </div>
+        <div id="menuRecent" class="menuContainer">
+          <button id="butRecent" class="menuTop" aria-label="Recent" aria-haspopup="true" aria-expanded="false">
+            <span class="kbdShortcut">R</span>ecent
+          </button>
+          <div id="recentContainer" role="menu" class="menuItemContainer hidden">
+          </div>
+        </div>
+        <div id="menuEdit" class="menuContainer">
+          <button id="butEdit" class="menuTop" aria-label="Edit" aria-haspopup="true" aria-expanded="false">
+              <span class="kbdShortcut">E</span>dit
+          </button>
+          <div role="menu" class="menuItemContainer hidden">
+            <button id="butCut" type="button" role="menuitem">
+              Cut <kbd>^X</kbd>
+            </button>
+            <button id="butCopy" type="button" role="menuitem">
+              Copy <kbd>^C</kbd>
+            </button>
+            <button id="butPaste" type="button" role="menuitem">
+              Paste <kbd>^V</kbd>
+            </button>
+          </div>
+        </div>
+        <div id="menuView" class="menuContainer">
+          <button id="butView" class="menuTop" aria-label="View" aria-haspopup="true" aria-expanded="false">
+              <span class="kbdShortcut">V</span>iew
+          </button>
+          <div role="menu" class="menuItemContainer hidden">
+            <button id="butWordWrap" type="button" aria-checked="true" role="menuitemcheckbox">
+              Word Wrap
+            </button>
+            <button id="butMonospace" type="button" aria-checked="false" role="menuitemcheckbox">
+              Monospace Font
+            </button>
+            <button id="butCaptureTabs" type="button" aria-checked="true" role="menuitemcheckbox">
+              Capture Tabs <kbd>^&uparrow;M</kbd>
+            </button>
+            <button id="butFontBigger" type="button" role="menuitem">
+              Increase Font Size
+            </button>
+            <button id="butFontSmaller" type="button" role="menuitem">
+              Decrease Font Size
+            </button>
+          </div>
+        </div>
+        <div id="menuInstall" class="menuContainer">
+          <button id="butInstall" aria-label="Install" class="menuTop hidden">
+              <span class="kbdShortcut">I</span>nstall
+          </button>
+        </div>
+      </nav>
     </header>
 
-    <div id="textEditor" autofocus spellcheck="false" aria-label="Text Editor"></div>
+    <div id="textEditor" autofocus aria-label="Text Editor"></div>
 
-    <a id="aDownloadFile" style="display: none;" download></a>
-    <input type="file" id="filePicker" style="display: none;">
+    <a id="aDownloadFile" download></a>
+    <input type="file" id="filePicker">
+
+    <details id="footer" class="footer" style="display: none;">
+      <summary>About
+        <span>
+          <span id="modifiedFooter" class="hidden">*</span>
+          <span id="lblLegacyFS" class="hidden footer-label">Legacy Mode</span>
+          <span id="lblTabMovesFocus" class="hidden footer-label">Tab Moves Focus</span>
+        </span>
+      </summary>
+      <div id="not-supported">
+        The
+        <a href="https://wicg.github.io/native-file-system/" target="_blank">Native File System API</a>
+        is <b>not</b> supported in this browser yet, and Text Editor is running
+        in legacy mode. In legacy mode, the file modified indicators are not shown.
+        If you're running Chrome, you can enable the Native File System
+        APIs by enabling the <code>#native-file-system-api</code>
+        flag in <code>chrome://flags</code>.
+      </div>
+      <div>
+        Text Editor is a simple text editor similar to notepad that makes
+        it easy to edit text files on your local file system. It shows how
+        to easily use the new HTML5 Native File System APIs. To learn more
+        about the Native File System APIs and how this demo was built, check out
+        <a href="https://web.dev/native-file-system/" target="_blank">
+        The native file system APIs</a> article on Web Fundamentals, or see the
+        <a href="https://github.com/GoogleChromeLabs/text-editor/" target="_blank">
+        source code on GitHub</a>.
+        Written by <a href="https://twitter.com/petele" target="_blank">Pete LePage</a>.
+        <small id="lastUpdated">
+          Last Updated: [[BUILD_DATE]] (v[[VERSION]])
+        </small>
+      </div>
+    </details>
 
     <!-- Import the web page's Javascript files -->
     <!-- <script src="./inline-scripts/base.js" inline></script> -->
@@ -76,10 +187,10 @@
 
     <script src="./inline-scripts/text-area.js" inline></script>
     <script src="./inline-scripts/fs-helpers.js" inline></script>
-    <!--<script src="./inline-scripts/menu-file.js" inline></script>
+    <script src="./inline-scripts/menu-file.js" inline></script>
     <script src="./inline-scripts/menu-edit.js" inline></script>
     <script src="./inline-scripts/menu-view.js" inline></script>
-    <script src="./inline-scripts/menu-recent.js" inline></script>-->
+    <script src="./inline-scripts/menu-recent.js" inline></script>
     <script src="./inline-scripts/ui.js" inline></script>
     <script src="./inline-scripts/keyboard-events.js" inline></script>
     <script src="./inline-scripts/load-sw.js" inline></script>
