--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 
     <div id="textEditor" autofocus aria-label="Text Editor"></div>
 
-    <a id="aDownloadFile" download></a>
-    <input type="file" id="filePicker">
+    <a id="aDownloadFile" style="display: none;" download></a>
+    <input type="file" id="filePicker" style="display: none;">
 
     <details id="footer" class="footer" style="display: none;">
       <summary>About
