--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- SEO description and info -->
-    <meta name="description" content="Text Editor - TinyMCE + PWA + NFS.">
+    <meta name="description" content="Text Editor - PWA + TinyMCE + NFS.">
     <link rel="canonical" href="https://googlechromelabs.github.io/text-editor/">
 
     <!-- Manifest and icons -->
@@ -29,7 +29,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://googlechromelabs.github.io/text-editor/">
     <meta name="twitter:title" content="Text Editor">
-    <meta name="twitter:description" content="Text Editor - TinyMCE + PWA + NFS..">
+    <meta name="twitter:description" content="Text Editor - PWA + TinyMCE + NFS..">
     <meta name="twitter:image" content="./images/icon-192.png">
     <meta name="twitter:creator" content="@petele">
 
@@ -38,7 +38,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="./images/icon-192.png">
     <meta property="og:url" content="https://googlechromelabs.github.io/text-editor/">
-    <meta property="og:description" content="Text Editor - TinyMCE + PWA + NFS..">
+    <meta property="og:description" content="Text Editor - PWA + TinyMCE + NFS..">
 
     <!-- Analytics -->
     <script src="./inline-scripts/analytics.js" inline></script>
