--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </nav>
     </header>
 
-    <div id="textEditor" autofocus aria-label="Text Editor"></div>
+    <div id="textEditor" aria-label="Text Editor"></div>
 
     <a id="aDownloadFile" style="display: none;" download></a>
     <input type="file" id="filePicker" style="display: none;">
