Remove Google stuff

--- a/index.html
+++ b/index.html
@@ -40,14 +40,6 @@
     <meta property="og:url" content="https://googlechromelabs.github.io/text-editor/">
     <meta property="og:description" content="Text Editor - PWA + TinyMCE + NFS..">
 
-    <!-- Analytics -->
-    <script src="./inline-scripts/analytics.js" inline></script>
-
-    <!-- Import the web page's stylesheets -->
-    <!--<link rel="stylesheet" href="./styles/main.css" inline>
-    <link rel="stylesheet" href="./styles/standalone.css" inline>
-    <link rel="stylesheet" media="print" href="./styles/print.css" inline>-->
-
     <!-- Origin Trial Token NFS API v1 (expires 2020-05-12) -->
     <meta http-equiv="origin-trial" content="ApP5hRHS+dIxGdu/1psSHsErxROE+aVFGqdUwBgrcsGuwWDpPo3iqanpH3EdEie7YHhBN0LL1sdkT89waJPbzwsAAABkeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZWNocm9tZWxhYnMuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJOYXRpdmVGaWxlU3lzdGVtIiwiZXhwaXJ5IjoxNTg5MzI3OTk5fQ==">
     <!-- Origin Trial Token NFS API v2 (expires 2020-05-25) -->
@@ -176,26 +168,7 @@
       </div>
     </details>
 
-    <!-- Import the web page's Javascript files -->
-    <!-- <script src="./inline-scripts/base.js" inline></script> -->
-    <script src="./inline-scripts/idb-keyval-iife.js" inline></script>
-
-    <script src="./inline-scripts/rum.js" inline></script>
-    <script src="./inline-scripts/app.js" inline></script>
-
-    <script src="./inline-scripts/menus.js" inline></script>
-
-    <script src="./inline-scripts/text-area.js" inline></script>
-    <script src="./inline-scripts/fs-helpers.js" inline></script>
-    <script src="./inline-scripts/menu-file.js" inline></script>
-    <script src="./inline-scripts/menu-edit.js" inline></script>
-    <script src="./inline-scripts/menu-view.js" inline></script>
-    <script src="./inline-scripts/menu-recent.js" inline></script>
-    <script src="./inline-scripts/ui.js" inline></script>
-    <script src="./inline-scripts/keyboard-events.js" inline></script>
-    <script src="./inline-scripts/load-sw.js" inline></script>
-    <script src="./inline-scripts/app-install.js" inline></script>
-    <script src="./inline-scripts/fallback.js" inline></script>
+    <script src="./native-fs.js" inline></script>
 
     <!-- Import libraries -->
     <script src="./tinymce/tinymce.min.js" referrerpolicy="origin"></script>
