--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- SEO description and info -->
     <meta name="description" content="Text Editor - PWA + TinyMCE + NFS.">
-    <link rel="canonical" href="https://googlechromelabs.github.io/text-editor/">
+    <link rel="canonical" href="https://alyw234237.github.io/text-editor/">
 
     <!-- Manifest and icons -->
     <link rel="manifest" href="./manifest.json">
@@ -27,17 +27,16 @@
 
     <!-- Default twitter cards -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://googlechromelabs.github.io/text-editor/">
+    <meta name="twitter:url" content="https://alyw234237.github.io/text-editor/">
     <meta name="twitter:title" content="Text Editor">
     <meta name="twitter:description" content="Text Editor - PWA + TinyMCE + NFS..">
     <meta name="twitter:image" content="./images/icon-192.png">
-    <meta name="twitter:creator" content="@petele">
 
     <!-- Other sharing -->
     <meta property="og:title" content="Text Editor">
     <meta property="og:type" content="website">
     <meta property="og:image" content="./images/icon-192.png">
-    <meta property="og:url" content="https://googlechromelabs.github.io/text-editor/">
+    <meta property="og:url" content="https://alyw234237.github.io/text-editor/">
     <meta property="og:description" content="Text Editor - PWA + TinyMCE + NFS..">
 
     <!-- Origin Trial Token NFS API v1 (expires 2020-05-12) -->
@@ -48,131 +47,17 @@
     <!-- Add TinyMCE editor stylesheet -->
     <link rel="stylesheet" href="./editor-styles.css" inline>
   </head>
-  <body class="wordwrap">
-    <header style="display: none;">
-      <h1>
-        <span id="headerFileName">Text Editor</span><span id="modifiedHeader" class="hidden">*</span>
-        <span id="headerAppName" class="hidden"> - Text Editor</span>
-      </h1>
-      <nav class="menubar">
-        <div id="menuFile" class="menuContainer">
-          <button id="butFile" class="menuTop" aria-label="File" aria-haspopup="true" aria-expanded="false">
-            <span class="kbdShortcut">F</span>ile
-          </button>
-          <div role="menu" class="menuItemContainer hidden">
-            <button id="butNew" type="button" role="menuitem">
-              New <kbd>^N</kbd>
-            </button>
-            <button id="butOpen" type="button" role="menuitem">
-              Open <kbd>^O</kbd>
-            </button>
-            <button id="butSave" type="button" role="menuitem">
-              Save <kbd>^S</kbd>
-            </button>
-            <button id="butSaveAs" type="button" role="menuitem">
-              Save As <kbd>^&uparrow;S</kbd>
-            </button>
-            <button id="butClose" type="button" role="menuitem">
-              Close <kbd>^W</kbd>
-            </button>
-          </div>
-        </div>
-        <div id="menuRecent" class="menuContainer">
-          <button id="butRecent" class="menuTop" aria-label="Recent" aria-haspopup="true" aria-expanded="false">
-            <span class="kbdShortcut">R</span>ecent
-          </button>
-          <div id="recentContainer" role="menu" class="menuItemContainer hidden">
-          </div>
-        </div>
-        <div id="menuEdit" class="menuContainer">
-          <button id="butEdit" class="menuTop" aria-label="Edit" aria-haspopup="true" aria-expanded="false">
-              <span class="kbdShortcut">E</span>dit
-          </button>
-          <div role="menu" class="menuItemContainer hidden">
-            <button id="butCut" type="button" role="menuitem">
-              Cut <kbd>^X</kbd>
-            </button>
-            <button id="butCopy" type="button" role="menuitem">
-              Copy <kbd>^C</kbd>
-            </button>
-            <button id="butPaste" type="button" role="menuitem">
-              Paste <kbd>^V</kbd>
-            </button>
-          </div>
-        </div>
-        <div id="menuView" class="menuContainer">
-          <button id="butView" class="menuTop" aria-label="View" aria-haspopup="true" aria-expanded="false">
-              <span class="kbdShortcut">V</span>iew
-          </button>
-          <div role="menu" class="menuItemContainer hidden">
-            <button id="butWordWrap" type="button" aria-checked="true" role="menuitemcheckbox">
-              Word Wrap
-            </button>
-            <button id="butMonospace" type="button" aria-checked="false" role="menuitemcheckbox">
-              Monospace Font
-            </button>
-            <button id="butCaptureTabs" type="button" aria-checked="true" role="menuitemcheckbox">
-              Capture Tabs <kbd>^&uparrow;M</kbd>
-            </button>
-            <button id="butFontBigger" type="button" role="menuitem">
-              Increase Font Size
-            </button>
-            <button id="butFontSmaller" type="button" role="menuitem">
-              Decrease Font Size
-            </button>
-          </div>
-        </div>
-        <div id="menuInstall" class="menuContainer">
-          <button id="butInstall" aria-label="Install" class="menuTop hidden">
-              <span class="kbdShortcut">I</span>nstall
-          </button>
-        </div>
-      </nav>
-    </header>
-
-    <div id="textEditor" aria-label="Text Editor"></div>
+  <body>
+    <div id="textEditor" class="syncscroll" aria-label="Text Editor"></div>
 
     <a id="aDownloadFile" style="display: none;" download></a>
     <input type="file" id="filePicker" style="display: none;">
 
-    <details id="footer" class="footer" style="display: none;">
-      <summary>About
-        <span>
-          <span id="modifiedFooter" class="hidden">*</span>
-          <span id="lblLegacyFS" class="hidden footer-label">Legacy Mode</span>
-          <span id="lblTabMovesFocus" class="hidden footer-label">Tab Moves Focus</span>
-        </span>
-      </summary>
-      <div id="not-supported">
-        The
-        <a href="https://wicg.github.io/native-file-system/" target="_blank">Native File System API</a>
-        is <b>not</b> supported in this browser yet, and Text Editor is running
-        in legacy mode. In legacy mode, the file modified indicators are not shown.
-        If you're running Chrome, you can enable the Native File System
-        APIs by enabling the <code>#native-file-system-api</code>
-        flag in <code>chrome://flags</code>.
-      </div>
-      <div>
-        Text Editor is a simple text editor similar to notepad that makes
-        it easy to edit text files on your local file system. It shows how
-        to easily use the new HTML5 Native File System APIs. To learn more
-        about the Native File System APIs and how this demo was built, check out
-        <a href="https://web.dev/native-file-system/" target="_blank">
-        The native file system APIs</a> article on Web Fundamentals, or see the
-        <a href="https://github.com/GoogleChromeLabs/text-editor/" target="_blank">
-        source code on GitHub</a>.
-        Written by <a href="https://twitter.com/petele" target="_blank">Pete LePage</a>.
-        <small id="lastUpdated">
-          Last Updated: [[BUILD_DATE]] (v[[VERSION]])
-        </small>
-      </div>
-    </details>
-
-    <script src="./native-fs.js" inline></script>
-
     <!-- Import libraries -->
-    <script src="./tinymce/tinymce.min.js" referrerpolicy="origin"></script>
-    <script src="./plugin-markdown.js"></script>
+    <script src="./native-fs.js" inline></script> <!-- File handling -->
+    <script src="./tinymce/tinymce.min.js" referrerpolicy="origin"></script> <!-- TinyMCE -->
+    <script src="./plugin-markdown.js"></script> <!-- TinyMCE markdown plugin (Showdown) -->
+    <script src="./syncscroll.js" inline></script> <!-- Syncscroll -->
 
     <!-- Import application main script -->
     <script src="./index.js" inline></script>
