--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <meta http-equiv="origin-trial" content="AouXz9/sqzYGRIFkw8KK0QXp0HOo99+Pg8NAr/4pRA1pAlaTeQ6BngqqkBUzfjvxzPcRf15pmieR4RDhJB9bKwAAAABleyJvcmlnaW4iOiJodHRwczovL2dvb2dsZWNocm9tZWxhYnMuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJOYXRpdmVGaWxlU3lzdGVtMiIsImV4cGlyeSI6MTU5MDQxNzc1NX0=">
 
     <!-- Include TinyMCE stylesheets -->
-    <link href="css/editor-styles-light.css" type="text/css" rel="stylesheet">
-    <!--<link href="css/editor-styles-dark.css" type="text/css" rel="stylesheet">-->
+    <link href="css/editor-styles.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div id="textEditor" aria-label="Text Editor"></div>
