--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
     <script src="libs/plugin-markdown.js"></script> <!-- TinyMCE markdown plugin (Showdown) -->
     <script src="libs/jquery-3.5.1.min.js" inline></script> <!-- jQuery -->
 
+    <!-- Import Prism library -->
+    <link rel="stylesheet" type="text/css" href="libs/prism/prism-dark.css">
+    <script src="libs/prism/prism-dark.js"></script>
+
     <!-- Import application main script -->
     <script src="index.js" inline></script>
   </body>
