--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <script src="libs/jquery-3.5.1.min.js" inline></script> <!-- jQuery -->
 
     <!-- Import Prism library -->
-    <link rel="stylesheet" type="text/css" href="libs/prism/prism-dark.css">
-    <script src="libs/prism/prism-dark.js"></script>
+    <link rel="stylesheet" type="text/css" href="libs/prism/prism-light.css">
+    <script src="libs/prism/prism-light.js"></script>
 
     <!-- Import application main script -->
     <script src="index.js" inline></script>
