--- a/index.html
+++ b/index.html
@@ -57,11 +57,9 @@
     <script src="libs/native-fs.js" inline></script> <!-- File handling -->
     <script src="libs/tinymce/tinymce.min.js" referrerpolicy="origin"></script> <!-- TinyMCE -->
     <script src="libs/plugin-markdown.js"></script> <!-- TinyMCE markdown plugin (Showdown) -->
+    <script src="libs/prism/prism.js" data-manual></script> <!-- Prism -->
+    <link rel="stylesheet" type="text/css" href="libs/prism/prism.css"> <!-- Prism CSS -->
     <script src="libs/jquery-3.5.1.min.js" inline></script> <!-- jQuery -->
-
-    <!-- Import Prism library -->
-    <link rel="stylesheet" type="text/css" href="libs/prism/prism-light.css">
-    <script src="libs/prism/prism-light.js"></script>
 
     <!-- Import application main script -->
     <script src="index.js" inline></script>
