--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
     <!-- Import libraries -->
     <script src="libs/native-fs.js" inline></script> <!-- File handling -->
     <script src="libs/tinymce/tinymce.min.js" referrerpolicy="origin"></script> <!-- TinyMCE -->
-    <script src="libs/plugin-markdown.js"></script> <!-- TinyMCE markdown plugin (Showdown) -->
+    <script src="libs/showdown.js"></script> <!-- Showdown -->
+    <script src="libs/turndown.js"></script> <!-- Turndown -->
+    <script src="libs/turndown-plugin-gfm.js"></script> <!-- Turndown Gfm plugin -->
     <script src="libs/prism/prism.js" data-manual></script> <!-- Prism -->
     <link rel="stylesheet" type="text/css" href="libs/prism/prism.css"> <!-- Prism CSS -->
     <script src="libs/jquery-3.5.1.min.js" inline></script> <!-- jQuery -->
