--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <script src="libs/turndown-plugin-gfm.js"></script> <!-- Turndown Gfm plugin -->
     <script src="libs/markdown-it.js"></script> <!-- markdown-it -->
     <script src="libs/markdown-it-multimd-table.js"></script> <!-- markdown-it MultiMDTable plugin -->
-    <script src="libs/prism/prism.js" data-manual></script> <!-- Prism -->
-    <link rel="stylesheet" type="text/css" href="libs/prism/prism.css"> <!-- Prism CSS -->
+    <script src="libs/prism.js" data-manual></script> <!-- Prism -->
+    <link rel="stylesheet" type="text/css" href="prism/prism.css"> <!-- Prism CSS -->
     <script src="libs/jquery-3.5.1.min.js" inline></script> <!-- jQuery -->
 
     <!-- Import application main script -->
