--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Text Editor</title>
+    <title>Markdown WYSIWYG Editor</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- SEO description and info -->
-    <meta name="description" content="Text Editor - PWA + TinyMCE + NFS.">
-    <link rel="canonical" href="https://alyw234237.github.io/text-editor/">
+    <meta name="description" content="Markdown WYSIWYG Editor is a simple web rich-text/WYSIWYG markdown editor.">
+    <link rel="canonical" href="https://alyw234237.github.io/md-wysiwyg-editor/">
 
     <!-- Manifest and icons -->
     <link rel="manifest" href="./manifest.json">
@@ -27,17 +27,17 @@
 
     <!-- Default twitter cards -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://alyw234237.github.io/text-editor/">
-    <meta name="twitter:title" content="Text Editor">
-    <meta name="twitter:description" content="Text Editor - PWA + TinyMCE + NFS..">
+    <meta name="twitter:url" content="https://alyw234237.github.io/md-wysiwyg-editor/">
+    <meta name="twitter:title" content="Markdown WYSIWYG Editor">
+    <meta name="twitter:description" content="Markdown WYSIWYG Editor is a simple web rich-text/WYSIWYG markdown editor.">
     <meta name="twitter:image" content="./images/icon-192.png">
 
     <!-- Other sharing -->
-    <meta property="og:title" content="Text Editor">
+    <meta property="og:title" content="Markdown WYSIWYG Editor">
     <meta property="og:type" content="website">
     <meta property="og:image" content="./images/icon-192.png">
-    <meta property="og:url" content="https://alyw234237.github.io/text-editor/">
-    <meta property="og:description" content="Text Editor - PWA + TinyMCE + NFS..">
+    <meta property="og:url" content="https://alyw234237.github.io/md-wysiwyg-editor/">
+    <meta property="og:description" content="Markdown WYSIWYG Editor is a simple web rich-text/WYSIWYG markdown editor.">
 
     <!-- Origin Trial Token NFS API v1 (expires 2020-05-12) -->
     <meta http-equiv="origin-trial" content="ApP5hRHS+dIxGdu/1psSHsErxROE+aVFGqdUwBgrcsGuwWDpPo3iqanpH3EdEie7YHhBN0LL1sdkT89waJPbzwsAAABkeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZWNocm9tZWxhYnMuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJOYXRpdmVGaWxlU3lzdGVtIiwiZXhwaXJ5IjoxNTg5MzI3OTk5fQ==">
