--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
     <meta http-equiv="origin-trial" content="ApP5hRHS+dIxGdu/1psSHsErxROE+aVFGqdUwBgrcsGuwWDpPo3iqanpH3EdEie7YHhBN0LL1sdkT89waJPbzwsAAABkeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZWNocm9tZWxhYnMuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJOYXRpdmVGaWxlU3lzdGVtIiwiZXhwaXJ5IjoxNTg5MzI3OTk5fQ==">
     <!-- Origin Trial Token NFS API v2 (expires 2020-05-25) -->
     <meta http-equiv="origin-trial" content="AouXz9/sqzYGRIFkw8KK0QXp0HOo99+Pg8NAr/4pRA1pAlaTeQ6BngqqkBUzfjvxzPcRf15pmieR4RDhJB9bKwAAAABleyJvcmlnaW4iOiJodHRwczovL2dvb2dsZWNocm9tZWxhYnMuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJOYXRpdmVGaWxlU3lzdGVtMiIsImV4cGlyeSI6MTU5MDQxNzc1NX0=">
-
-    <!-- Include TinyMCE stylesheets -->
-    <link href="css/editor-styles.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div id="textEditor" aria-label="Text Editor"></div>
@@ -56,6 +53,8 @@
     <!-- Import libraries -->
     <script src="libs/native-fs.js" inline></script> <!-- File handling -->
     <script src="libs/tinymce/tinymce.min.js" referrerpolicy="origin"></script> <!-- TinyMCE -->
+    <!-- Include TinyMCE stylesheets -->
+    <link href="css/editor-styles.css" type="text/css" rel="stylesheet">
     <script src="libs/showdown.js"></script> <!-- Showdown -->
     <script src="libs/turndown.js"></script> <!-- Turndown -->
     <script src="libs/turndown-plugin-gfm.js"></script> <!-- Turndown Gfm plugin -->
@@ -64,6 +63,11 @@
     <script src="libs/prism.js" data-manual></script> <!-- Prism -->
     <link rel="stylesheet" type="text/css" href="prism/prism.css"> <!-- Prism CSS -->
     <script src="libs/jquery-3.5.1.min.js" inline></script> <!-- jQuery -->
+
+    <script src="libs/highlight.min.js"></script>
+    <link rel="stylesheet" href="libs/github.min.css">
+    <script src="libs/simplemde.js"></script>
+    <link rel="stylesheet" href="libs/simplemde.css">
 
     <!-- Import application main script -->
     <script src="index.js" inline></script>
