Switch from SimpleMDE to EasyMDE

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
     <script src="libs/highlight.min.js"></script>
     <link rel="stylesheet" href="libs/github.min.css">
-    <script src="libs/simplemde.js"></script>
-    <link rel="stylesheet" href="libs/simplemde.css">
+    <script src="libs/easymde.js"></script>
+    <link rel="stylesheet" href="libs/easymde.css">
 
     <!-- Import application main script -->
     <script src="index.js" inline></script>
