--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     <script src="libs/easymde.js"></script>
     <link rel="stylesheet" href="libs/easymde.css">
 
-    <!-- Import application main script -->
+    <!-- Import application main scripts -->
+    <script src="frontMatter.js" inline></script>
     <script src="index.js" inline></script>
   </body>
 </html>
