Update app name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Add to homescreen for Chrome on Android. -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Text Edit">
+    <meta name="application-name" content="Markdown WYSIWYG Editor">
 
     <!-- Tile icon for Windows 8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="./images/icon-144.png">
@@ -45,7 +45,7 @@
     <meta http-equiv="origin-trial" content="AouXz9/sqzYGRIFkw8KK0QXp0HOo99+Pg8NAr/4pRA1pAlaTeQ6BngqqkBUzfjvxzPcRf15pmieR4RDhJB9bKwAAAABleyJvcmlnaW4iOiJodHRwczovL2dvb2dsZWNocm9tZWxhYnMuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJOYXRpdmVGaWxlU3lzdGVtMiIsImV4cGlyeSI6MTU5MDQxNzc1NX0=">
   </head>
   <body>
-    <div id="textEditor" aria-label="Text Editor"></div>
+    <div id="textEditor" aria-label="Markdown WYSIWYG Editor"></div>
 
     <a id="aDownloadFile" style="display: none;" download></a>
     <input type="file" id="filePicker" style="display: none;">
