Add missing colors

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- 
+  @Author: Roni Laukkarinen
+  @Date:   2022-01-05 10:44:48
+  @Last Modified by:   Roni Laukkarinen
+  @Last Modified time: 2022-01-05 13:02:30
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,7 +18,7 @@
 
     <!-- Manifest and icons -->
     <link rel="manifest" href="./manifest.json">
-    <link rel="icon" type="image/png" href="./images/favicon.png">
+    <link rel="icon" type="image/png" href="./images/favicon-alt.png">
     <meta name="theme-color" content="#FFFFFF">
     <link rel="apple-touch-icon" sizes="192x192" href="./images/icon-192.png">
 
